[MOD] Se agrega esqueleto de la pagina.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="offer"></div>
+    <header>
+        <h1></h1>
+    </header>
+    <main>
+        <section>
+            <div>
+                <div></div>
+                <h2></h2>
+                <p></p>
+            </div>
+            <div>
+                <div></div>
+                <h2></h2>
+                <p></p>
+            </div>
+            <div>
+                <div></div>
+                <h2></h2>
+                <p></p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p></p>
+    </footer>
 </body>
 </html>
