--- a/index.html
+++ b/index.html
@@ -1,37 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div id="offer"></div>
+    <div id="offer">
+        <div id="offer-img"></div>
+    </div>
     <header>
-        <h1></h1>
+        <h1>Card Super Heroes</h1>
     </header>
     <main>
         <section>
-            <div>
-                <div></div>
-                <h2></h2>
-                <p></p>
+            <div class="card">
+                <div class="card-bg" id="bg-batman">
+                    <span class="material-icons favs">
+                        favorite
+                        </span>
+                </div>
+                <div class="card-img" id="img-batman"></div>
+                <h2>BATMAN</h2>
+                <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective
+                    Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+                <div class="ver-mas">Ver mas</div>
             </div>
-            <div>
-                <div></div>
-                <h2></h2>
-                <p></p>
+            <div class="card">
+                <div class="card-bg" id="bg-wonderw">
+                    <span class="material-icons favs">
+                        favorite
+                        </span>
+                </div>
+                <div class="card-img" id="img-wonderw"></div>
+                <h2>MUJER MARAVILLA</h2>
+                <p>El personaje apareció como tal publicado por primera vez en la revista de historietas All Star Comics
+                    (de diciembre de 1941)1​ y con su alter-ego en el Sensation Comics</p>
+                <div class="ver-mas">Ver mas</div>
+                
             </div>
-            <div>
-                <div></div>
-                <h2></h2>
-                <p></p>
+            <div class="card">
+                <div class="card-bg" id="bg-superman">
+                    <span class="material-icons favs">
+                        favorite
+                        </span>
+                </div>
+                <div class="card-img" id="img-superman"></div>
+                <h2>SUPERMAN</h2>
+                <p>Superman nace en un mundo extraño a una especie tecnológicamente avanzada que se parece a los
+                    humanos. Poco después de nacer, su planeta se destruye en un cataclismo natural</p>
+                <div class="ver-mas">Ver mas</div>
             </div>
         </section>
     </main>
     <footer>
-        <p></p>
+        <p>Todos los derechos reservados a FRONT END 1</p>
     </footer>
 </body>
+
 </html>
