--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <title>Document</title>
+    <title>Card WEB</title>
 </head>
 
 <body>
@@ -58,6 +56,9 @@
                     humanos. Poco después de nacer, su planeta se destruye en un cataclismo natural</p>
                 <div class="ver-mas">Ver mas</div>
             </div>
+            <span class="material-icons add-circle">
+                add_circle
+                </span>
         </section>
     </main>
     <footer>
