[MOD] Se borra etiqueta div conflictiva.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </head>
 
 <body>
-    <div id="offer">
-        <div id="offer-img"></div>
-    </div>
+    
+    <div id="offer"></div>
     <header>
         <h1>Card Super Heroes</h1>
     </header>
