--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <title>Card WEB</title>
+    <title>Card WEB - Leandro Occhiato</title>
 </head>
 
 <body>
@@ -20,40 +21,34 @@
         <section>
             <div class="card">
                 <div class="card-bg" id="bg-batman">
-                    <span class="material-icons favs">
-                        favorite
-                        </span>
+                    <i class="fas fa-heart"></i>
                 </div>
                 <div class="card-img" id="img-batman"></div>
                 <h2>BATMAN</h2>
                 <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective
                     Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
-                <div class="ver-mas">Ver mas</div>
+                <div class="boton-vm">Ver mas</div>
             </div>
             <div class="card">
                 <div class="card-bg" id="bg-wonderw">
-                    <span class="material-icons favs">
-                        favorite
-                        </span>
+                    <i class="fas fa-heart"></i>
                 </div>
                 <div class="card-img" id="img-wonderw"></div>
                 <h2>MUJER MARAVILLA</h2>
                 <p>El personaje apareció como tal publicado por primera vez en la revista de historietas All Star Comics
                     (de diciembre de 1941)1​ y con su alter-ego en el Sensation Comics</p>
-                <div class="ver-mas">Ver mas</div>
+                <div class="boton-vm">Ver mas</div>
                 
             </div>
             <div class="card">
                 <div class="card-bg" id="bg-superman">
-                    <span class="material-icons favs">
-                        favorite
-                        </span>
+                    <i class="fas fa-heart"></i>
                 </div>
                 <div class="card-img" id="img-superman"></div>
                 <h2>SUPERMAN</h2>
                 <p>Superman nace en un mundo extraño a una especie tecnológicamente avanzada que se parece a los
                     humanos. Poco después de nacer, su planeta se destruye en un cataclismo natural</p>
-                <div class="ver-mas">Ver mas</div>
+                <div class="boton-vm">Ver mas</div>
             </div>
             <span class="material-icons add-circle">
                 add_circle
