--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 <h2>BATMAN</h2>
                 <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective
                     Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
-                <div class="boton-vm">Ver mas</div>
+                <a href="https://thebatmanuniverse.net/" target="_blank">
+                    <div class="boton-vm">Ver mas</div>
+                </a>
             </div>
             <div class="card">
                 <div class="card-bg" id="bg-wonderw">
@@ -37,7 +39,9 @@
                 <h2>MUJER MARAVILLA</h2>
                 <p>El personaje apareció como tal publicado por primera vez en la revista de historietas All Star Comics
                     (de diciembre de 1941)1​ y con su alter-ego en el Sensation Comics</p>
-                <div class="boton-vm">Ver mas</div>
+                <a href="https://es.fanpop.com/clubs/wonder-woman/" target="_blank">
+                    <div class="boton-vm">Ver mas</div>
+                </a>
                 
             </div>
             <div class="card">
@@ -48,7 +52,9 @@
                 <h2>SUPERMAN</h2>
                 <p>Superman nace en un mundo extraño a una especie tecnológicamente avanzada que se parece a los
                     humanos. Poco después de nacer, su planeta se destruye en un cataclismo natural</p>
-                <div class="boton-vm">Ver mas</div>
+                <a href="https://www.capedwonder.com/" target="_blank">
+                    <div class="boton-vm">Ver mas</div>
+                </a>
             </div>
             <span class="material-icons add-circle">
                 add_circle
