[MOD] Se cambia el icono por una imagen.

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
                     <div class="boton-vm">Ver mas</div>
                 </a>
             </div>
-            <span class="material-icons add-circle">
-                add_circle
-                </span>
+            <img src="img/Button.svg" id="boton-circle">
         </section>
     </main>
     <footer>
