--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -12,11 +12,26 @@
 </head>
 
 <body>
-    
-    <div id="offer"></div>
+
+    <div id="offer">20% de descuento en todos los productos!</div>
     <header>
-        <h1>Card Super Heroes</h1>
+        <img id="logo" src="img/logo.svg"></img>
+        <h2>Super Tienda</h2>
     </header>
+
+    <nav>
+        <ul type="none">
+            <a href="models/about.html">
+                <li>Contacto</li>
+            </a>
+            <a href="models/register.html">
+                <li>Registrarme</li>
+            </a>
+            <a href="models/login.html">
+                <li>Ingresar</li>
+            </a>
+        </ul>
+    </nav>
     <main>
         <section>
             <div class="card">
@@ -25,8 +40,7 @@
                 </div>
                 <div class="card-img" id="img-batman"></div>
                 <h2>BATMAN</h2>
-                <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective
-                    Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+                <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
                 <a href="https://thebatmanuniverse.net/" target="_blank">
                     <div class="boton-vm">Ver mas</div>
                 </a>
@@ -36,13 +50,12 @@
                     <i class="fas fa-heart"></i>
                 </div>
                 <div class="card-img" id="img-wonderw"></div>
-                <h2>MUJER MARAVILLA</h2>
-                <p>El personaje apareció como tal publicado por primera vez en la revista de historietas All Star Comics
-                    (de diciembre de 1941)1​ y con su alter-ego en el Sensation Comics</p>
+                <h2>Harley Quinn</h2>
+                <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada</p>
                 <a href="https://es.fanpop.com/clubs/wonder-woman/" target="_blank">
                     <div class="boton-vm">Ver mas</div>
                 </a>
-                
+
             </div>
             <div class="card">
                 <div class="card-bg" id="bg-superman">
@@ -50,13 +63,11 @@
                 </div>
                 <div class="card-img" id="img-superman"></div>
                 <h2>SUPERMAN</h2>
-                <p>Superman nace en un mundo extraño a una especie tecnológicamente avanzada que se parece a los
-                    humanos. Poco después de nacer, su planeta se destruye en un cataclismo natural</p>
+                <p>Superman nace en un mundo extraño a una especie tecnológicamente avanzada que se parece a los humanos. Poco después de nacer, su planeta se destruye en un cataclismo natural</p>
                 <a href="https://www.capedwonder.com/" target="_blank">
                     <div class="boton-vm">Ver mas</div>
                 </a>
             </div>
-            <img src="img/Button.svg" id="boton-circle">
         </section>
     </main>
     <footer>
