[MOD] Se arreglan errores que rompen la pagina.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <nav>
         <ul type="none">
-            <a href="models/about.html">
+            <a href="models/login.html">
                 <li>Contacto</li>
             </a>
-            <a href="models/register.html">
+            <a href="models/login.html">
                 <li>Registrarme</li>
             </a>
             <a href="models/login.html">
