--- a/models/login.html
+++ b/models/login.html
@@ -17,15 +17,15 @@
     <header>
         <img id="logo" src="../img/logo.svg"></img>
         <h1>
-            Nombre Tienda
+            Super Tienda
         </h1>
     </header>
     <main>
         <form action="../index.html" method="post">
-            <h2 id="login">Login</h2>
+            <h2>Login</h2>
             <input type="text" class="login-i" id="user" placeholder="Usuario">
             <input type="password" class="login-i" id="pass" placeholder="Contraseña">
-            <boton>Entrar</boton>
+            <button type="submit">Entrar</button>
             <p><a href="models/register.html" target="_blank">¿No tienes una cuenta?</a> Registrarme</p>
         </form>
     </main>
