[MOD] Se cambian footers y se quita link de mas.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </section>
     </main>
     <footer>
-        <p>Todos los derechos reservados a FRONT END 1</p>
+        <p>Todos los derechos reservados a Leandro Occhiato</p>
     </footer>
 </body>
 
