--- a/models/login.html
+++ b/models/login.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <title>Document</title>
 </head>
@@ -27,7 +26,9 @@
             <p><a href="models/register.html" target="_blank">¿No tienes una cuenta?</a> Registrarme</p>
         </form>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Todos los derechos reservados a Leandro Occhiato</p>
+    </footer>
 </body>
 
 </html>
