[MOD] Se agrega pagina de registro.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <div id="offer">20% de descuento en todos los productos!</div>
     <header>
-        <img id="logo" src="img/logo.svg"></img>
+        <a href="/">
+            <img id="logo" src="img/logo.svg"></img>
+        </a>
         <h1>Super Tienda</h1>
     </header>
 
