--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="offer">20% de descuento en todos los productos!</div>
     <header>
-        <a href="/">
+        <a href="./">
             <img id="logo" src="img/logo.svg"></img>
         </a>
         <h1>Super Tienda</h1>
