[MOD] Se modifico el nav, y otros cambios minimos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="models/login.html">
                 <li>Contacto</li>
             </a>
-            <a href="models/login.html">
+            <a href="models/register.html">
                 <li>Registrarme</li>
             </a>
             <a href="models/login.html">
