--- a/models/register.html
+++ b/models/register.html
@@ -22,10 +22,11 @@
     <main>
         <form action="../index.html" method="post">
             <h2>Registro</h2>
-            <input type="text" class="login-i" id="user" placeholder="Nombre y Apellido">
-            <input type="email" class="login-i" id="mail" placeholder="Correo Electrónico">
-            <input type="password" class="login-i" id="pass" placeholder="Contraseña">
-            <select type="" class="login-i" id="pais" placeholder="País">
+            <input type="text" id="user" placeholder="Nombre y Apellido">
+            <input type="email" id="mail" placeholder="Correo Electrónico">
+            <input type="password" id="pass" placeholder="Contraseña">
+            <select type="" id="pais" placeholder="País">
+                <option value="" selected disabled hidden>Escoja un país...</option>
                 <option value="arg">Argentina</option>
                 <option value="col">Colombia</option>
                 <option value="bra">Brasil</option>
