[ADD] se agregan las dos paginas restantes.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
     <title>Card WEB - Leandro Occhiato</title>
 </head>
 
@@ -20,21 +19,20 @@
         </a>
         <h1>Super Tienda</h1>
     </header>
-
-    <nav>
-        <ul type="none">
-            <a href="models/login.html">
-                <li>Contacto</li>
-            </a>
-            <a href="models/register.html">
-                <li>Registrarme</li>
-            </a>
-            <a href="models/login.html">
-                <li>Ingresar</li>
-            </a>
-        </ul>
-    </nav>
     <main>
+        <nav>
+            <ul type="none">
+                <a href="models/contacto.html">
+                    <li>Contacto</li>
+                </a>
+                <a href="models/register.html">
+                    <li>Registrarme</li>
+                </a>
+                <a href="models/login.html">
+                    <li>Ingresar</li>
+                </a>
+            </ul>
+        </nav>
         <section>
             <div class="card">
                 <div class="card-bg" id="bg-batman">
@@ -43,7 +41,7 @@
                 <div class="card-img" id="img-batman"></div>
                 <h2>BATMAN</h2>
                 <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
-                <a href="https://thebatmanuniverse.net/" target="_blank">
+                <a href="./models/details.html">
                     <div class="boton-vm">Ver mas</div>
                 </a>
             </div>
@@ -54,10 +52,9 @@
                 <div class="card-img" id="img-wonderw"></div>
                 <h2>Harley Quinn</h2>
                 <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada</p>
-                <a href="https://es.fanpop.com/clubs/wonder-woman/" target="_blank">
+                <a href="./models/details.html">
                     <div class="boton-vm">Ver mas</div>
                 </a>
-
             </div>
             <div class="card">
                 <div class="card-bg" id="bg-superman">
@@ -66,7 +63,7 @@
                 <div class="card-img" id="img-superman"></div>
                 <h2>SUPERMAN</h2>
                 <p>Superman nace en un mundo extraño a una especie tecnológicamente avanzada que se parece a los humanos. Poco después de nacer, su planeta se destruye en un cataclismo natural</p>
-                <a href="https://www.capedwonder.com/" target="_blank">
+                <a href="./models/details.html">
                     <div class="boton-vm">Ver mas</div>
                 </a>
             </div>
