--- a/models/contacto.html
+++ b/models/contacto.html
@@ -13,7 +13,7 @@
     <div id="offer">20% de descuento en todos los productos!</div>
     <header>
         <a href="../">
-            <img id="logo" src="../img/logo.svg">
+            <img id="logo" src="../img/logo.svg"></img>
         </a>
         <h1>
             Super Tienda
@@ -21,24 +21,17 @@
     </header>
     <main>
         <section>
-            <form action="../index.html" method="post">
-                <h2>Registro</h2>
+            <form action="../" method="GET">
+                <h2>Contacto</h2>
                 <div class="inputs">
-                    <input type="text" id="user" placeholder="Nombre y Apellido">
-                    <input type="email" id="mail" placeholder="Correo Electrónico">
-                    <input type="password" id="pass" placeholder="Contraseña">
-                    <select type="" id="pais" placeholder="País">
-                        <option value="" selected disabled hidden>Escoja un país...</option>
-                        <option value="arg">Argentina</option>
-                        <option value="col">Colombia</option>
-                        <option value="bra">Brasil</option>
-                    </select>
+                    <input type="text" placeholder="Usuario">
+                    <input type="password" placeholder="Contraseña">
+                    <textarea></textarea>
                 </div>
                 <div class="buttons">
                     <input type="reset" value="Resetear"></input>
                     <input type="submit" value="Entrar"></input>
                 </div>
-                <p><a href="login.html">¿Ya tenés una cuenta?</a> Ingresá</p>
             </form>
         </section>
     </main>
