--- a/models/login.html
+++ b/models/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/forms.css">
     <title>Document</title>
 </head>
 
@@ -13,22 +13,26 @@
     <div id="offer">20% de descuento en todos los productos!</div>
     <header>
         <a href="../">
-            <img id="logo" src="../img/logo.svg"></img>
+            <img id="logo" src="../img/logo.svg">
         </a>
         <h1>
             Super Tienda
         </h1>
     </header>
     <main>
-        <form action="../index.html" method="post">
-            <h2>Login</h2>
-            <div id="campos">
-                <input type="text" class="login-i" id="user" placeholder="Usuario">
-                <input type="password" class="login-i" id="pass" placeholder="Contraseña">
-            </div>
-            <button type="submit">Entrar</button>
-            <p><a href="register.html">¿No tienes una cuenta?</a> Registrarme</p>
-        </form>
+        <section>
+            <form action="../" method="GET">
+                <h2>Login</h2>
+                <div class="inputs">
+                    <input type="text" placeholder="Usuario">
+                    <input type="password" placeholder="Contraseña">
+                </div>
+                <div class="buttons">
+                    <button type="submit">Entrar</div>
+                </div>
+                <p><a href="register.html">¿No tienes una cuenta?</a> Registrarme</p>
+            </form>
+        </section>
     </main>
     <footer>
         <p>Todos los derechos reservados a Leandro Occhiato</p>
