--- a/models/contacto.html
+++ b/models/contacto.html
@@ -24,8 +24,8 @@
             <form action="../" method="GET">
                 <h2>Contacto</h2>
                 <div class="inputs">
-                    <input type="text" placeholder="Usuario">
-                    <input type="password" placeholder="Contraseña">
+                    <input type="text" placeholder="Nombre y Apellido">
+                    <input type="email" placeholder="Correo electrónico">
                     <textarea></textarea>
                 </div>
                 <div class="buttons">
