[MOD] Pagina añadir terminado.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                     <div class="boton-vm">Ver mas</div>
                 </a>
             </div>
+            <a href="./models/añadir.html">
+                <img id="plus" src="./img/button.svg">
+
+            </a>
         </section>
     </main>
     <footer>
