[MOD] Se arregla nav de añadir.

--- a/models/añadir.html
+++ b/models/añadir.html
@@ -22,13 +22,13 @@
     <main>
         <nav>
             <ul type="none">
-                <a href="models/contacto.html">
+                <a href="../models/contacto.html">
                     <li>Contacto</li>
                 </a>
-                <a href="models/register.html">
+                <a href="../models/register.html">
                     <li>Registrarme</li>
                 </a>
-                <a href="models/login.html">
+                <a href="../models/login.html">
                     <li>Ingresar</li>
                 </a>
             </ul>
