[MOD] se arreglaron margenes y botones.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                 </a>
             </div>
             <a href="./models/añadir.html">
-                <img id="plus" src="./img/button.svg">
-
+                <img id="plus">
             </a>
         </section>
     </main>
