[MOD] Se agrega required a los input.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <a href="./models/añadir.html">
-                <img id="plus">
+                <img id="plus" src="./img/plus.svg">
             </a>
         </section>
     </main>
