--- a/models/añadir.html
+++ b/models/añadir.html
@@ -41,7 +41,7 @@
                     <label class="requerido" for="name">
                         Nombre
                     </label>
-                    <input type="text" name="name">
+                    <input type="text" name="name" required>
                     <label for="date">
                         Fecha
                     </label>
@@ -52,7 +52,7 @@
                     <label class="requerido" for="kind">
                         Especie
                     </label>
-                    <select name="kind">
+                    <select name="kind" required>
                         <option value="" selected disabled hidden></option>
                         <option value="Human">Humano</option>
                         <option value="Deviant">Desviante</option>
