--- a/models/register.html
+++ b/models/register.html
@@ -24,11 +24,11 @@
             <form action="../index.html" method="post">
                 <h2>Registro</h2>
                 <div class="inputs">
-                    <input type="text" id="user" placeholder="Nombre y Apellido">
-                    <input type="email" id="mail" placeholder="Correo Electrónico">
-                    <input type="password" id="pass" placeholder="Contraseña">
-                    <select type="" id="pais" placeholder="País">
-                        <option value="" selected disabled hidden>Escoja un país...</option>
+                    <input type="text" id="user" placeholder="Nombre y Apellido" required>
+                    <input type="email" id="mail" placeholder="Correo Electrónico" required>
+                    <input type="password" id="pass" placeholder="Contraseña" required>
+                    <select type="" id="pais" placeholder="País" required>
+                        <option value="" selected disabled hidden required>Escoja un país...</option>
                         <option value="arg">Argentina</option>
                         <option value="col">Colombia</option>
                         <option value="bra">Brasil</option>
