--- a/models/login.html
+++ b/models/login.html
@@ -24,8 +24,8 @@
             <form action="../" method="GET">
                 <h2>Login</h2>
                 <div class="inputs">
-                    <input type="text" placeholder="Usuario">
-                    <input type="password" placeholder="Contraseña">
+                    <input type="text" placeholder="Usuario" required>
+                    <input type="password" placeholder="Contraseña" required>
                 </div>
                 <div class="buttons">
                     <button type="submit">Entrar</div>
