[MOD] Se corrigen lang, head, input y form.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <title>Formularios II</title>
     <link rel="stylesheet" type="text/css" href="css/home.css">
-    <title>Card WEB - Leandro Occhiato</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -18,6 +18,8 @@
             <img id="logo" src="img/logo.svg"></img>
         </a>
         <h1>Super Tienda</h1>
+    </header>
+    <main>
         <nav>
             <ul type="none">
                 <a href="models/contacto.html">
@@ -31,8 +33,6 @@
                 </a>
             </ul>
         </nav>
-    </header>
-    <main>
         <section>
             <div class="card">
                 <div class="card-bg" id="bg-batman">
