--- a/models/contacto.html
+++ b/models/contacto.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto</title>
     <link rel="stylesheet" type="text/css" href="../css/forms.css">
-    <title>Document</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section>
-            <form action="../" method="GET">
+            <form action="../">
                 <h2>Contacto</h2>
                 <div class="inputs">
                     <input type="text" placeholder="Nombre y Apellido" required>
