--- a/models/login.html
+++ b/models/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loguearme</title>
     <link rel="stylesheet" type="text/css" href="../css/forms.css">
-    <title>Document</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section>
-            <form action="../" method="GET">
+            <form action="../">
                 <h2>Login</h2>
                 <div class="inputs">
                     <input type="text" placeholder="Usuario" required>
