[MOD] Se aplico flex en section, main y cards.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
             <img id="logo" src="img/logo.svg"></img>
         </a>
         <h1>Super Tienda</h1>
-    </header>
-    <main>
         <nav>
             <ul type="none">
                 <a href="models/contacto.html">
@@ -33,21 +31,25 @@
                 </a>
             </ul>
         </nav>
+    </header>
+    <main>
         <section>
+
             <div class="card">
                 <div class="card-bg" id="bg-batman">
-                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-heart corazoncito"></i>
                 </div>
                 <div class="card-img" id="img-batman"></div>
                 <h2>BATMAN</h2>
                 <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
-                <a href="./models/details.html">
-                    <div class="boton-vm">Ver mas</div>
+                <a class="boton-vm" href="./models/details.html">
+                    Ver mas
                 </a>
             </div>
+
             <div class="card">
                 <div class="card-bg" id="bg-wonderw">
-                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-heart corazoncito"></i>
                 </div>
                 <div class="card-img" id="img-wonderw"></div>
                 <h2>Harley Quinn</h2>
@@ -58,7 +60,7 @@
             </div>
             <div class="card">
                 <div class="card-bg" id="bg-superman">
-                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-heart corazoncito"></i>
                 </div>
                 <div class="card-img" id="img-superman"></div>
                 <h2>SUPERMAN</h2>
