[MOD] Se aplico flexbox en form de añadir.

--- a/models/añadir.html
+++ b/models/añadir.html
@@ -84,8 +84,10 @@
                                 Villano / Villana</label>
                     </div>
                 </fieldset>
-                <button type="submit" id="añadir">
-                </button>
+                <div class="buttons">
+                    <button type="submit" id="añadir">
+                    </button>
+                </div>
             </form>
         </section>
     </main>
