[ADD] Se le agrega server node a la pagina.

--- a/index.html
+++ b/index.html
@@ -8,30 +8,34 @@
     <title>Formularios II</title>
     <link rel="stylesheet" type="text/css" href="css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script async src="https://cse.google.com/cse.js?cx=0544f81b23858af08"></script>
 </head>
 
 <body>
 
     <div id="offer">20% de descuento en todos los productos!</div>
     <header>
-        <a href="./">
-            <img id="logo" src="img/logo.svg"></img>
-        </a>
-        <h1>Super Tienda</h1>
-        <nav>
-            <ul type="none">
-                <a href="models/contacto.html">
-                    <li>Contacto</li>
-                </a>
-                <a href="models/register.html">
-                    <li>Registrarme</li>
-                </a>
-                <a href="models/login.html">
-                    <li>Ingresar</li>
-                </a>
-            </ul>
-        </nav>
+        <div class=logo>
+            <a href="./">
+                <img src="img/logo.svg"></img>
+            </a>
+            <h1>Super Tienda</h1>
+        </div>
+        <div class="gcse-search"></div>
     </header>
+    <nav>
+        <ul type="none">
+            <a href="models/contacto.html">
+                <li>Contacto</li>
+            </a>
+            <a href="models/register.html">
+                <li>Registrarme</li>
+            </a>
+            <a href="models/login.html">
+                <li>Ingresar</li>
+            </a>
+        </ul>
+    </nav>
     <main>
         <section>
 
