[ADD] agrego js del cierre de semana

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    <script src="js/loteria.js"></script>
     <div id="offer">20% de descuento en todos los productos!</div>
     <header>
         <a href="./">
