--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script async src="https://cse.google.com/cse.js?cx=0544f81b23858af08"></script>
 </head>
+document.getElementById('aLink').addEventListener('click',function(e){ e.preventDefault(); alert ("Hola Mundo"); });
 
 <body>
-    <script src="js/loteria.js"></script>
+    <script src="js/juego.js"></script>
     <div id="offer">20% de descuento en todos los productos!</div>
     <header>
         <div class=logo>
@@ -34,6 +35,10 @@
             <a href="models/login.html">
                 <li>Ingresar</li>
             </a>
+            <a href="javascript:iniciarJuego()">
+                <li>Piedra, papel, tijera o Spock</li>
+            </a>
+
         </ul>
     </nav>
     <main>
